# timez-pro

./: .gitignore  CLAUDE.md  QA_REPORT.md
.claude/agent-memory/react-ui-architect/: MEMORY.md
.claude/agent-memory/rust-quality-guardian/: MEMORY.md
.claude/agents/: business-analyst-architect.md  fastapi-backend-architect.md  react-ui-architect.md  rust-quality-guardian.md  senior-engineer.md  tauri-frontend-engineer.md
backend/: API_DOCS.md  auth.py  database.py  main.py  migrate_to_projects.py  models.py  postman_collection.json  requirements.txt  schemas.py
backend/routes/: __init__.py  auth.py  dashboard.py  projects.py  reports.py  tasks.py  timer.py
backend/tests/: test_sync_time.py
dashboard/: README.md  package.json  vite.config.js
dashboard/src/: App.jsx  Login.jsx  api.js
dashboard/src/components/: CreateProjectModal.jsx  CreateTaskModal.jsx  EmployeeCard.jsx  KanbanColumn.jsx  Layout.jsx  MemberManager.jsx  ProjectCard.jsx  ProjectSelector.jsx  StatCard.jsx  TaskAssignmentPicker.jsx
dashboard/src/pages/: Daily.jsx  DailySummary.jsx  DashboardHome.jsx  Employees.jsx  Kanban.jsx  ProjectDetail.jsx  Projects.jsx
desktop-app/: ARCHITECTURE.md  README.md  index.html  package.json
desktop-app/scripts/: prepare-service.mjs
desktop-app/src/: App.tsx  AuthContext.tsx  LoginPage.tsx  main.tsx
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/.claude/agent-memory/rust-quality-guardian/: MEMORY.md
desktop-app/src-tauri/app/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/app/src/: instance.rs  ipc.rs  lib.rs  main.rs
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/core/: Cargo.toml
desktop-app/src-tauri/core/src/: api.rs  idle.rs  lib.rs  models.rs  protocol.rs  timer_state.rs  timer_state_tests.rs
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/resources/: notify-helper.py  timez-auth-service  timez-idle-time-service  timez-quit-service  timez-service  timez-task-service  timez-tracker-service
desktop-app/src-tauri/service/: Cargo.toml
desktop-app/src-tauri/service/src/: auth_store.rs  idle_detection.rs  lib.rs  runtime.rs  state.rs  sync_queue.rs
desktop-app/src-tauri/service/src/servers/: auth.rs  idle_time.rs  mod.rs  quit.rs  task.rs  tracker.rs
desktop-app/src-tauri/service/src/services/: auth.rs  idle_time.rs  quit.rs  task.rs  tracker.rs
desktop-app/src-tauri/src/: api.rs  commands.rs  idle.rs  lib.rs  local_store.rs  main.rs  models.rs  timer_state.rs
desktop-app/src-tauri/src/services/: activity.rs  api.rs  auth.rs  cron.rs  mod.rs  quit.rs  storage.rs  tasks.rs  timer.rs
e2e/: timer-flow.spec.ts
(+3 files in other folders)
