[package]
name = "timez-pro"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
build = "app/build.rs"

[lib]
name = "timez_pro_lib"
path = "app/src/lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "timez-pro"
path = "app/src/main.rs"

[workspace]
members = ["core", "service"]
resolver = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
single-instance = "0.3"
timez-core = { path = "core" }
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"
