[package]
name = "timez-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ureq = { version = "2", features = ["json"] }
open = "5"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"
