[package]
name = "timez-service"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
timez-core = { path = "../core" }

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }
